syntax = "proto3";

package payment.v1;

option go_package = "go-link/common/gen/go/payment/v1;paymentv1";

service PaymentService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

message ProcessPaymentRequest {
  int64 invoice_id = 1;
  int64 tenant_id = 2;
  double amount = 3;
  string currency = 4;
}

message ProcessPaymentResponse {
  int64 payment_id = 1;
  string status = 2;
  string error_message = 3;
}
